# bsp-casefolding-workaround-nix

./: .gitignore  Pipfile  README.md  bsp-extractor.py  default.nix  flake.nix  lock.x86_64-linux.json  pyproject.toml  setup.cfg
.github/workflows/: flakehub-publish-tagged.yml
bsp-casefolding-workaround/: __init__.py
src/bsp_casefolding_workaround/: __init__.py
